# fisher

./: Cargo.toml
src/: chat_interface.rs  cuvs.rs  faiss.rs  files.rs  home_screen.rs  main.rs  model.rs
src/ui/: home_screen.rs  mod.rs
