[package]
name = "fisher"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.27"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"
tokio-stream = "0.1"
futures-util = "0.3"
pdf-extract = "0.9.0"
once_cell = "1.19"
faiss = "0.12.1"
